[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cancellable-http-client"
version = "1.0"
description = "A tiny, dependency-free HTTP client for Python with cancellable in-flight requests and hard wall-clock timeout."
readme = "README.md"
license = "UPL-1.0"
requires-python = ">=3.7"
authors = [
    { name = "Sakilabo Corporation Ltd." },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/sakilabo/cancellable-http-client"
Issues = "https://github.com/sakilabo/cancellable-http-client/issues"
